@@ -46,12 +46,48 @@ Cpu::~Cpu ()
 // ! Step one single clock of the processor
 
 void
-Cpu::clock_step ()
+Cpu::clockStep ()
 {
   mCpu->clk = mClk;
   mCpu->eval ();
   mClk++;
-}	// Cpu::clock_step ()
+}	// Cpu::clockStep ()
+
+
+// ! If trap is set, then get the processor in the right state to
+// ! redo that instruction properly
+
+void
+Cpu::clearTrapAndRestartInstruction ()
+{
+  // do nothing if trap is not set
+  if (haveTrap ())
+  {
+    // the trap happened on the instruction we want to continue from
+    uint32_t prev_pc = mCpu->testbench->uut->readPc();
+    // unfortunately, when we come out of trap, the instruction at the current
+    // pc effectively becomes a NOP, so we actually need to set pc to the
+    // previous instruction and then execute it. We then end up at the
+    // desired pc that will execute properly.
+    mCpu->testbench->uut->writePc (prev_pc-4);
+    mCpu->testbench->uut->clearTrapAndContinue ();
+    // loop until the processor has come out of the trap and changed pc to
+    // the value we wrote above
+    do
+    {
+      clockStep ();
+    }
+    while (prev_pc == readProgramAddr ());
+    // pc now is at the prev instruction, which will effectively work as a NOP
+    // and get us to the instruction we actually want to continue from, so
+    // let's step it
+    step ();
+    // we are now ready to properly execute the instruction that trapped
+
+  }
+
+}	// Cpu::clearTrapAndRestartInstruction ()
+
 
 //! Step one instruction execution
 
@@ -61,7 +97,7 @@ Cpu::step ()
   uint32_t prev_pc = readProgramAddr ();
   do
   {
-    clock_step ();
+    clockStep ();
   }
   while (prev_pc == readProgramAddr () && haveTrap () == 0);
   return haveTrap () == 1;
@@ -151,7 +187,7 @@ Cpu::writeProgramAddr (uint32_t val)
   while (inReset ()) {
     // keep stepping the clock and writing PC while in reset, so that we are
     // at the desired start address once out of reset.
-    clock_step ();
+    clockStep ();
     mCpu->testbench->uut->writePc (val);
   }
 
